# GamePhysicsEngine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
Test/: BinReaderTest.cpp  EncodingTest.cpp  ReadHeaderTest.cpp
resource/config/: ActorRenderTest.json  BVH.json  cloth.json  example.json  test.json
resource/models/: bunny_low.mesh  bunny_low.mesh_.csv  chatgpt.txt  cloth20x20(small).objzcoord-1.0  sphere.mesh  sphere.txt  tet.txt  tet2.txt  tet3.txt
resource/models/37/: read_pmx
resource/models/dress/: dress.mtl
resource/models/xiaoying/: blush_d.tga  lace_d.tga  prop_d.tga  xiaoying.pmx
resource/shader/cloth_tile/: cloth_tile.frag  cloth_tile.vert
resource/shader/normal_map/: normal_map.frag  normal_map.vert
resource/shader/test/: test.frag  test.vert
resource/shader/texture/: texture.frag  texture.vert
resource/shader/tile/: tile.frag  tile.vert
script/: genCloth.py
src/: Actor.cpp  Actor.h  CMakeLists.txt  Engine.cpp  Engine.h  Geometry.cpp  Geometry.h  Input.h  Utils.h  timer.h
src/Base/: CMakeLists.txt  Color.h  ControlParam.cpp  ControlParam.h  DataStructure.h  IOUtils.h  Log.cpp  Log.h
src/GUI/: CMakeLists.txt  GUISystem.cpp  GUISystem.h
src/Geometry/: BroadPhase.cpp  BroadPhase.h  CMakeLists.txt  Geometry.cpp  Geometry.h  ParticleSystem.cpp  ParticleSystem.h  TetBoolean.cpp  TetBoolean.h  TetrahedronIterator.cpp  TetrahedronIterator.h  TetrahedronMesh.cpp  TetrahedronMesh.h
src/Loader/: BinReader.h  CMakeLists.txt  JsonLoader.h  PmxReader.h  ResourcesManager.cpp  ResourcesManager.h  TetLoader.h  UnifiedModel.cpp  UnifiedModel.h  Utils.h  json.hpp
src/Math/: Bounds.h  CMakeLists.txt  GC.cpp  GC.h
src/Physic/: CMakeLists.txt  Cloth.cpp  Cloth.h  MovableObject.h  PhysicsSystem.cpp  PhysicsSystem.h  RigidBody.cpp  RigidBody.h
src/Renderer/: CMakeLists.txt  Camera.cpp  Camera.h  GLShaderProgram.cpp  GLShaderProgram.h  GLShaderProgramFactory.cpp  GLShaderProgramFactory.h  GLVertexArray.cpp  GLVertexArray.h  RenderSystem.cpp  RenderSystem.h  Scene.cpp  Scene.h  Shader.h  glad.c
src/Renderer/Materials/: Material.cpp  Material.h
src/Renderer/Objects/: Cube.cpp  Cube.h  Mesh.cpp  Mesh.h  ObectBase.h  Particles.h  Sphere.h
src/Window/: CMakeLists.txt  WindowSystem.cpp  WindowSystem.h
test/: ActorRenderTest.cpp  BVHTest.cpp  BaseUtilTest.cpp  CMakeLists.txt  ClothDatasetTest.cpp  ConvexHull.cpp  GLFWTest.cpp  GLMTest.cpp  GeoTest.cpp  JSONTest.cpp  LogTest.cpp  Poly2TriTest.cpp  RendererTest.cpp  TetIntersectTest.cpp  TetrahedronTest.cpp
